--- a/style.css
+++ b/style.css
@@ -1,127 +1,40 @@
-.wrap{
-    background-color: rgb(224, 214, 63);
+.main{
+    /* background-color: grey; */
     display: flex;
-    justify-content: center;
     flex-direction: column;
-
-}
-
-
-#tab_container{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 5%;
-
-    /* height: auto; */
-    background-color: aquamarine;
-}
-
-#main{
-    /* display: flex; */
     /* justify-content: center; */
-    /* flex-direction: column; */
-    background-color:wheat;
-    width: 100%;
-    height: 600px;
-    width: auto;
     align-items: center;
+    height: 800px;
 }
 
-.day{
+h1{
+    /* font-weight: bolder; */
+    font-size: 100px;
+    font-family: "Bungee Outline";
+    margin: 0px;
+}
+
+h2{
+    font-size:50px ;
+    font-family: "Lakki Reddy";
+}
+
+p{
     font-size: 40px;
+    font-family: "Flavors";
 }
 
-footer{
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    box-shadow: 3px 3px 3px gray;
-}
+button{
+    height: 100px;
+    width: 100px;
+    border-radius: 25%;
+    box-shadow: 3px 3px;
 
-#message{
-    height: 150px;
-    width: 70%;
-    background-color: blueviolet;
-    border-radius: 5px 5px 5px;
-    margin-top: 50px;
-    margin-left: 15px;
-    margin-right: 15px;
-    box-shadow: 3px 3px 3px gray;
-    color: aliceblue;
-    /* align-items: center; */
-}
-
-.tab{
-    position: relative;
-}
-
-#today{
-    height: 300px;
-    background-color: cadetblue;
+    font-size: large;
+    /* font-weight: bolder; */
 }
 
 
 
 
 
-
-/* html,
-body {
-	height: 100%;
-	font-family: Arial, sans-serif;
-	letter-spacing: 2px;
-	color: #333;
-	text-align: center;
-	background-color: #f6f8f8;
-}
-
-#tab_container {
-	width: 700px;
-	margin: 0 auto;
-}
-
-.tab {
-	position: relative;
-	float: left;
-	background-color: #F1C40F;
-	height: 100px;
-	width: 100px;
-}
-
-.day {
-	position: absolute;
-	bottom: 10px;
-	left: 10px;
-	font-size: 22px;
-	color: #f39c12;
-}
-
-#today {
-	height: 300px;
-	background-color: #16A085;
-
-	box-shadow: -3px 0 0 rgba(0,0,0,0.3);
-	
-}
-
-#today .day {
-	font-size: 38px;
-	font-weight: bold;
-	color: #f6f8f8;
-	text-shadow: -3px 3px 0 rgba(0,0,0,0.3);
-}
-
-.clear {
-	clear: both;
-}
-
-#message{
-	padding: 50px;
-	font-size: 40px;
-	color: #f6f8f8;
-	background-color: #16A085;
-	text-shadow: -3px 3px 0 rgba(0,0,0,0.3);
-
-	box-shadow: 0 3px 0 rgba(0,0,0,0.3);
-
-} */
